<resources>
    <string name="app_name">ProyectoFinal_Eq1_GestorDeGastosPersonales</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preparate_para_cuidar_ntu_dinero_de_forma_segura">Preparate para cuidar\ntu dinero de forma \'segura\'</string>
    <string name="ingresar">Ingresar</string>
    <string name="aun_no_te_has_registrado">¿Aun no te has registrado?</string>
    <string name="registrate">Registrate</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="correo">Correo:</string>
    <string name="ejemplo_dominio_com">ejemplo@dominio.com</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="contraOlvidada">¿Olvidaste tu contraseña?</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombres">Nombre(s):</string>
    <string name="nombreEjemplo">Dwayne</string>
    <string name="apellidos">Apellidos:</string>
    <string name="apellidoEjemplo">Johnson</string>
    <string name="correoTV">Correo:</string>
    <string name="ejemploCorreo">ejemplo@dominio.com</string>
    <string name="contra">Contraseña:</string>
    <string name="confirmarContra">Confirmar contraseña:</string>
    <string name="fechaNacimiento">Fecha de nacimiento:</string>
    <string name="formatoNacimiento">DD/MM/AAAA</string>
    <string name="registrarte">Registrarte</string>
    <string name="perfil">Perfil</string>
    <string name="configuracion">Configuración</string>
    <string name="persona_random">Persona Random</string>
    <string name="correoRandom">Random23@gmail.com</string>
    <string name="informacion_personal">Información Personal</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="persona_random2">Persona Random</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="cambiar_contra">Cambiar contraseña</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="graficas">Graficas</string>
    <string name="mayo_2025"><![CDATA[Mayo 2025 >]]></string>
    <string name="todas"><![CDATA[Todas >]]></string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="historial_de_movimientos">Historial de movimientos</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="presupuesto_mensual">Presupuesto Mensual</string>
    <string name="presupuesto_total">Presupuesto Total</string>
    <string name="presupuesto_dinero">$25,000</string>
    <string name="gastado">Gastado</string>
    <string name="gastado_dinero">$18,700</string>
    <string name="restante_ejemplo">Restante: $6,300</string>
    <string name="btn_agregar">+ Agregar</string>
    <string name="categorias">Categorias</string>
    <string name="alimentacion">Alimentación</string>
    <string name="signo_dinero">$</string>
    <string name="cincomildoscientos">5,200</string>
    <string name="ochomil">8,000</string>
    <string name="porcentaje">65%</string>
    <string name="registrar_gasto">Registrar Gasto</string>
    <string name="monto">Monto:</string>
    <string name="monto_hint">Monto</string>
    <string name="categoria">Categoria:</string>
    <string name="categoria_hint">Categoria</string>
    <string name="tipo_pago">Tipo pago:</string>
    <string name="tipo_pago_hint">Pago</string>
    <string name="fecha_de_gasto">Fecha de gasto:</string>
    <string name="fecha_hint">Seleccionar</string>
    <string name="descripcion">Descripcion:</string>
    <string name="descripcion_hint">Descripcion</string>
    <string name="confirmar">Confirmar</string>
    <string name="registrar_ingreso">Registrar Ingreso</string>
    <string name="fecha_de_ingreso">Fecha de ingreso:</string>
    <string name="detalles_movimientos">Detalles\nMovimientos</string>
    <string name="gasto_dinero">-$850.00</string>
    <string name="informacion">Información</string>
    <string name="categoria_detalle_movimiento">Categoría</string>
    <string name="fecha">Fecha</string>
    <string name="fecha_formato">10 Mayo 1999</string>
    <string name="hora">Hora</string>
    <string name="hora_movimiento">14:30 PM</string>
    <string name="metodo_de_pago">Método de pago</string>
    <string name="efectivo">Efectivo</string>
    <string name="descripcion_movimiento">Compra semanal de despensa para sobrevivir pipipi</string>
    <string name="btn_editar">✏️ Editar</string>
    <string name="btn_eliminar">🗑️ Eliminar</string>
    <string name="transporte_view">Transporte</string>
    <string name="fecha_view">12/10/2025</string>
    <string name="tarjeta_view">Tarjeta</string>
    <string name="monto_view">-$10,000</string>
    <string name="adjuntar_ticket_opcional">Adjuntar Ticket (Opcional)</string>
</resources>