<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moradoBackground"
    android:fillViewport="true"
    tools:context=".fragments.gasto.RegistrarGastoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/moradoHeader"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/imagesix"
                android:layout_marginEnd="12dp" />

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/registrar_gasto"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:fontFamily="@font/inter18ptbold"
                android:gravity="center_vertical" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monto"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/inter18ptitalic"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/montoGasto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_naranja"
            android:hint="@string/monto_hint"
            android:layout_marginLeft="45dp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter18ptregular"
            android:layout_marginRight="45dp"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/inter18ptitalic"
            android:layout_marginLeft="45dp" />

        <AutoCompleteTextView
            android:id="@+id/categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/borde_naranja"
            android:hint="@string/fecha_hint"
            android:padding="12dp"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/inter18ptregular"
            android:textSize="16sp"
            android:dropDownHeight="400dp"
            android:dropDownVerticalOffset="8dp"
            android:dropDownWidth="match_parent"
            android:inputType="none" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_pago"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/inter18ptitalic"
            android:layout_marginLeft="45dp" />

        <AutoCompleteTextView
            android:id="@+id/tipoPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:hint="@string/fecha_hint"
            android:background="@drawable/borde_naranja"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/inter18ptregular"
            android:layout_marginBottom="16dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:inputType="none" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_gasto"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/inter18ptitalic"
            android:layout_marginLeft="45dp" />

        <EditText
            android:id="@+id/fechaGasto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/borde_naranja"
            android:hint="@string/fecha_hint"
            android:padding="12dp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter18ptregular"
            android:textSize="16sp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/inter18ptitalic"
            android:layout_marginLeft="45dp" />

        <EditText
            android:id="@+id/descripcionGasto"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/borde_naranja"
            android:hint="@string/descripcion_hint"
            android:padding="12dp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter18ptregular"
            android:textSize="16sp"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnSeleccionarFoto"
            android:text="@string/adjuntar_ticket_opcional"
            android:layout_gravity="center"
            android:backgroundTint="@color/naranja"
            android:textColor="@color/black"
            android:fontFamily="@font/inter18ptbold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnRegistrarGasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/naranja"
            android:textColor="@color/black"
            android:fontFamily="@font/inter18ptbold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/ivVistaPreviaTicket"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_launcher_background"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:src="@drawable/imagethree"
            android:layout_gravity="center_horizontal"
            android:scaleType="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
</ScrollView>